--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html cclassName="antialiased" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -10,6 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/src/components/contador/simplyCountdown.min.js"></script>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/src/index.css">
   </body>
 </html>
